--- a/gaming_xp.html
+++ b/gaming_xp.html
@@ -25,7 +25,16 @@
       </div>
       <h1> The Reality </h1>
       <p> "Harassment is seen as sort of a rite of passage within the community. It’s something that is ingrained in the culture. While one could argue that anyone could be on the butt end of harassment in any given game, more often than not if a woman is on the mic, she will receive rude put-downs or inappropriate comments. These can be about anything from her skill in the game all the way to her voice or her appearance. A poll taken in 2017 by Washington Post-UMass Lowell found that 36 percent of female gamers said that women are treated with less respect than men, while 24 percent said they are treated about equally. While harassment is something that no one should have to put up with, women disproportionately have to put up with it." - Emily Land.</p>
+      <p> </p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/YEOhb8B6rEU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+      <h1> Olivia's Experience </h1>
+      <p> Like in the video above, girls commonly receive harassment in video games, especially
+        in ones that require voice communication. A remotely feminine-sounding voice can invoke
+        criticism and verbal harassment from your teammates, and this makes it incredibly discouraging to speak.
+        Anything short of an average "alpha male" voice receives criticism from the community, and normally,
+        it is unfortunately tolerated. People will treat harassment in the gaming community with ignorance
+        or as a bystander. Very few stand up, and as a girl, this makes it hard to participate in
+        communication between the team, which is a very core part of the game. </p>
   </body>
 </html>
